// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mendly.Uri.parent > 'file path' 1`] = `
Uri {
  "authority": Authority {
    "endpoint": Endpoint {
      "host": [],
      "port": undefined,
    },
    "user": User {
      "name": undefined,
      "password": undefined,
    },
  },
  "fragment": undefined,
  "path": [
    ".",
    "folder",
  ],
  "query": {},
  "scheme": [],
}
`;

exports[`mendly.Uri.parent > 'folder path' 1`] = `
Uri {
  "authority": Authority {
    "endpoint": Endpoint {
      "host": [],
      "port": undefined,
    },
    "user": User {
      "name": undefined,
      "password": undefined,
    },
  },
  "fragment": undefined,
  "path": [
    ".",
    "folder",
    "sub",
  ],
  "query": {},
  "scheme": [],
}
`;

exports[`mendly.Uri.parent > 'keeps scheme authority query fragment' 1`] = `
Uri {
  "authority": Authority {
    "endpoint": Endpoint {
      "host": [
        "server",
        "example",
        "com",
      ],
      "port": undefined,
    },
    "user": User {
      "name": undefined,
      "password": undefined,
    },
  },
  "fragment": "frag",
  "path": [
    "folder",
  ],
  "query": {
    "alpha": "1",
  },
  "scheme": [
    "https",
  ],
}
`;

exports[`mendly.Uri.parent > 'no path' 1`] = `
Uri {
  "authority": Authority {
    "endpoint": Endpoint {
      "host": [],
      "port": undefined,
    },
    "user": User {
      "name": undefined,
      "password": undefined,
    },
  },
  "fragment": undefined,
  "path": [],
  "query": {},
  "scheme": [
    "file",
  ],
}
`;

exports[`mendly.Uri.parent > 'rootless absolute file' 1`] = `
Uri {
  "authority": Authority {
    "endpoint": Endpoint {
      "host": [],
      "port": undefined,
    },
    "user": User {
      "name": undefined,
      "password": undefined,
    },
  },
  "fragment": undefined,
  "path": [
    "folder",
  ],
  "query": {},
  "scheme": [],
}
`;

exports[`mendly.Uri.parent > 'single segment path' 1`] = `
Uri {
  "authority": Authority {
    "endpoint": Endpoint {
      "host": [],
      "port": undefined,
    },
    "user": User {
      "name": undefined,
      "password": undefined,
    },
  },
  "fragment": undefined,
  "path": [
    ".",
  ],
  "query": {},
  "scheme": [],
}
`;

exports[`mendly.Uri.parent > 'top level file' 1`] = `
Uri {
  "authority": Authority {
    "endpoint": Endpoint {
      "host": [],
      "port": undefined,
    },
    "user": User {
      "name": undefined,
      "password": undefined,
    },
  },
  "fragment": undefined,
  "path": [
    ".",
  ],
  "query": {},
  "scheme": [],
}
`;
